# cmake-cookbook

01-HelloWorld/cpp/: CMakeLists.txt
01-HelloWorld/fortran/: CMakeLists.txt  hello.f90
02-Library/cpp/: CMakeLists.txt
02-Library/fortran/: CMakeLists.txt  compute-areas.f90
02-Variables/cpp/: CMakeLists.txt  variables.cmake
02-Variables/cpp/src/: CMakeLists.txt
03-LibraryTarget/cpp/: CMakeLists.txt  README.md  compute-areas.cpp  project.dot  project.dot.compute-areas  project.dot.geometry.dependers
03-Targets/cpp/: CMakeLists.txt  hello.cpp
04-FindFFTW/: CMakeLists.txt
04-library/cpp/: Blas.hpp  Blas1_dot.cpp  Blas2_mv.cpp  Blas3_mm.cpp  main.cpp
Debugging/: CMakeLists.txt  README.md
FindingPackages/fftw/: FindFFTW.cmake  README.md
FindingPackages/fftw-no-imported-targets/: CMakeLists.txt  FindFFTW.cmake
FindingPackages/mpi_mixed/: README.md
FindingPackages/mpi_mixed/cxx/: hello.cpp
FindingPackages/recipe-10/c-example/: CMakeLists.txt
HelloWorld/cpp/: CMakeLists.txt  hello.cpp
HelloWorld/fortran/: CMakeLists.txt  hello.f90
Installing/recipe-01/install/lib64/: libmessage.so.1
Testing/recipe-01/cxx-example/: CMakeLists.txt
chapter-01/recipe-06/example/c/: CMakeLists.txt
chapter-01/recipe-06/example/cxx/: CMakeLists.txt
chapter-01/recipe-06/example/fortran/: CMakeLists.txt
chapter-01/recipe-07/c/: CMakeLists.txt
chapter-01/recipe-07/cxx/: CMakeLists.txt
